corrected top and bottom padding on mobile screen size so spacing is kept and not lost

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -437,6 +437,7 @@ body {
     }
     .container-fluid {
       margin: 0;
-      padding: 0;
+      padding-left: 0;
+      padding-right: 0;
     }
 }
